compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_logical_wrong_types-11.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: false shr 1

---
"_"@(FileId(1), 6..7) -> ConstError { kind: WrongOperandType, span: (FileId(1), 17..20) }

error in file FileId(1) at 17..20: wrong type for compile-time expression

