compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_logical_wrong_types-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 => false

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..23 }, state: Error(ConstError { kind: WrongOperandType, span: Span { file: None, range: 15..17 } }) },
    ],
    var_to_expr: {
        DefId(0): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: WrongOperandType, span: Span { file: None, range: 15..17 } }

error at 15..17: wrong type for compile-time expression

