compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_logical_wrong_types-6.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: false or 1.0

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..23, state: Error(WrongType) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(WrongType, 17..19)

error at 17..19: wrong type for compile-time expression

